--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
-  
+  <!-- Open Graphs for other social platforms -->
+
+  <!-- Open Graphs for the X platform -->
+
+  <!-- FAVICONS -->
+
   <title>Expenses chart component</title>
 
 </head>
