modify(core): add css and js links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
   <link rel="manifest" href="/assets/favicons/site.webmanifest">
 
+  <!-- CSS Link  -->
+  <link rel="stylesheet" href="./src/chart.css">
+  
+  <!-- JavaScript Link -->
+  <script type="module" src="./src/chart.js"></script>
+
   <title>Expenses chart component</title>
 
 </head>
