modify(core): add comments to file

--- a/index.html
+++ b/index.html
@@ -44,5 +44,8 @@
 
     <title>Expenses chart component</title>
   </head>
-  <body></body>
+  <body>
+    <!-- My First goal is to build ti entire chart component with JavaScript and style with CSS with little to no HTML -->
+    <!-- Since charts can be gotten from tables like in excel we can use table elements to build a bar chart  -->
+  </body>
 </html>
