--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <title>Expenses chart component</title>
   </head>
   <body>
-    <!-- My First goal is to build ti entire chart component with JavaScript and style with CSS with little to no HTML -->
+    <!-- My First goal is to build the entire chart component with JavaScript and style with CSS with little to no HTML -->
     <!-- Since charts can be gotten from tables like in excel we can use table elements to build a bar chart  -->
+    <h1 class="sr-only">An expense chart component</h1>
+    <section class="expense-chart-component">
+      <div class="expense-chart-component__header"></div>
+      <div class="expense-chart-component__info"></div>
+    </section>
   </body>
 </html>
