--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="./assets/logo.svg" class="expense-chart-component__logo" alt="chart logo">
       </div>
       <div class="expense-chart-component__info">
-        <div class="success">
+        <div class="hide success">
           <table class="expense-chart">
             <caption>Spending-Last 7 days</caption>
             <thead>
@@ -122,7 +122,11 @@
             <p class="previous-month"><span>+2.4%</span>from last month</p>
           </div>
         </div>
-        <div class="failure"></div>
+        <div class="failure">
+          <p class="failure__message"><strong>Oops!</strong>You are lost</p>
+          <p class="failure__response-status"></p>
+          <img src="./assets/erroricon.png" alt="">
+        </div>
       </div>
     </section>
   </body>
