--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Bar chart with information indicating money spent on different days of the week"
+    />
 
-    <!-- Open Graphs for other social platforms -->
+    <!-- Open Graph for Other Platforms -->
+    <meta property="og:title" content="Expense Chart Component" />
+    <meta
+      property="og:description"
+      content="Bar chart with information indicating money spent on different days of the week"
+    />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="Expense chart logo" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:width" content="72" />
+    <meta property="og:image:height" content="48" />
 
-    <!-- Open Graphs for the X platform -->
+    <!-- Open Graph for the X Platform -->
+    <meta name="twitter:title" content="Expense Chart Component" />
+    <meta
+      name="twitter:description"
+      content="Bar chart with information indicating money spent on different days of the week"
+    />
+    <meta
+      name="twitter:app:url:iphone"
+      content="https://chart-expenses.netlify.app/?src=twitter"
+    />
+    <meta name="twitter:image" content="" />
+    <meta name="twitter:image:alt" content="Expense chart logo" />
+    <meta name="twitter:image:width" content="72" />
+    <meta name="twitter:image:height" content="48" />
+    <meta name="twitter:card" content="website" />
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,14 +81,19 @@
         <p class="failure expense-chart-component__balance">
           My balance <span>$921.48</span>
         </p>
-        <img src="./assets/logo.svg" class="expense-chart-component__logo" alt="chart logo">
+        <img
+          src="./assets/logo.svg"
+          class="expense-chart-component__logo"
+          alt="chart logo"
+        />
       </div>
       <div class="expense-chart-component__info">
-
         <!-- When we make a successful request -->
-        <div class="hide success">
+        <div class="success">
           <table class="expense-chart">
-            <caption>Spending-Last 7 days</caption>
+            <caption>
+              Spending-Last 7 days
+            </caption>
             <thead>
               <tr>
                 <th scope="col">Days of the week</th>
@@ -127,15 +160,20 @@
 
         <!-- When we make a request and we do not obtain the required response -->
         <div class="failure">
-          <p class="failure__message"><strong>Oops!</strong>You are lost</p>
-          <p class="failure__response-status"></p>
+          <p class="failure__message"><strong></strong></p>
           <picture>
-            <source srcset="./assets/erroricon.webp" type="image/webp">
-            <source srcset="./assets/erroricon.png" type="image/png">
-            <img alt="" aria-hidden="true" src="./assets/erroricon.png" width="2100" height="2100">
+            <source srcset="./assets/erroricon.webp" type="image/webp" />
+            <source srcset="./assets/erroricon.png" type="image/png" />
+            <img
+              alt=""
+              aria-hidden="true"
+              src="./assets/erroricon.png"
+              width="2100"
+              height="2100"
+            />
           </picture>
           <button class="btn-refresh">
-            <img alt="" aria-hidden="true" src="./assets/reload.svg">
+            <img alt="" aria-hidden="true" src="./assets/reload.svg" />
             <p>Reload</p>
           </button>
         </div>
