fix(core): obtain better accessibility report

--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
     <title>Expenses chart component</title>
   </head>
   <body>
+    <main>
     <!-- My First goal is to build the entire chart component with JavaScript and style with CSS with little to no HTML -->
     <!-- Since charts can be gotten from tables like in excel we can use table elements to build a bar chart  -->
-    <h1 class="sr-only">An expense chart component</h1>
-    <section class="expense-chart-component">
+      <h1 class="sr-only">An expense chart component</h1>
+      <section class="expense-chart-component">
       <div class="expense-chart-component__header">
         <p class="failure expense-chart-component__balance">
           My balance <span>$921.48</span>
@@ -174,10 +175,11 @@
           </picture>
           <button class="btn-refresh">
             <img alt="" aria-hidden="true" src="./assets/reload.svg" />
-            <p>Reload</p>
+            <div>Reload</div>
           </button>
         </div>
       </div>
-    </section>
+      </section>
+  </main>
   </body>
 </html>
