fix(core):add property html elements

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <h1 class="sr-only">An expense chart component</h1>
       <section class="expense-chart-component">
       <div class="expense-chart-component__header">
-        <p class="failure expense-chart-component__balance">
+        <h2 class="failure expense-chart-component__balance">
           My balance <span>$921.48</span>
-        </p>
+        </h2>
         <img
           src="./assets/logo.svg"
           class="expense-chart-component__logo"
