fix(core): fix error generated in HTML report

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </picture>
           <button class="btn-refresh">
             <img alt="" aria-hidden="true" src="./assets/reload.svg" />
-            <div>Reload</div>
+            Reload
           </button>
         </div>
       </div>
