--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       property="og:description"
       content="Bar chart with information indicating money spent on different days of the week"
     />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://chart-expense.netlify.app/logo.2649a69b.svg" />
     <meta property="og:image:alt" content="Expense chart logo" />
     <meta property="og:type" content="website" />
     <meta property="og:image:width" content="72" />
@@ -30,7 +30,7 @@
       name="twitter:app:url:iphone"
       content="https://chart-expenses.netlify.app/?src=twitter"
     />
-    <meta name="twitter:image" content="" />
+    <meta name="twitter:image" content="https://chart-expense.netlify.app/logo.2649a69b.svg" />
     <meta name="twitter:image:alt" content="Expense chart logo" />
     <meta name="twitter:image:width" content="72" />
     <meta name="twitter:image:height" content="48" />
